# fuse

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  MANIFEST.in  Makefile  README.md  explain_grad.md  mkdocs.yml  parent.tsv  pyproject.toml  setup.py  sister.tsv
.github/workflows/: ci.yml  docs.yml
.hypothesis/constants/: 03d4e40cd17410f5  0b5cb9b3b6378b99  3ed1f68d11f793d0  3f32288358d451db  55d55246e33f7434  67713d4cbfa791cf  6c26f403dda9cd2f  7ad9ac1159874182  7b59818a674a4e2e  7e562d127f90fb7e  89ce58c34b015dd8  8c14c56c716b56eb  8c22d7a2b9f18615  8d91d5f89b7d2fd1  ad8aa42d389c35c2  cddf90694e27fe00  d9eed1283ca18e68  e52fbdcda4a37f3a  e602d85705467b6e  e84480057e320f74  e98c1bfb21c08cb5  ed8f65e958acc8d6  ef1a5e7914f6b0b1
benchmarks/: attention_benchmark.py
docs/: backend_matrix.md  cli.md  community.md  dsl_reference.md  get-started.md  index.md
docs/_scripts/: gen_ref_pages.py
docs/concepts/: index.md  migration.md
docs/how-to/: index.md
docs/stylesheets/: extra.css
docs/tutorials/: index.md
examples/: 01_attention_block.fuse  01_attention_block.py  02_rules_and_embeddings.fuse  02_rules_and_embeddings.py  03_zero_input_lm.fuse  03_zero_input_lm.py  04_mlp.fuse  05_transformer_block.fuse  06_gnn_message_passing.fuse  07_cnn_1d.fuse  08_rnn_unrolled.fuse  09_logistic_regression.fuse  10_hmm_forward.fuse  11_factor_graph.fuse  12_gaussian_process.fuse  13_svm_kernel.fuse  14_datalog_logic.fuse  15_kg_embeddings.fuse  16_differentiable_logic.fuse  17_neural_theorem_prover.fuse  18_policy_guard.fuse  19_variational_autoencoder.fuse  20_diffusion_process.fuse  21_energy_based_model.fuse  22_rbm_energy.fuse  23_neuro_symbolic.fuse  24_prob_neural_fusion.fuse  25_graph_transformer_hybrid.fuse  26_physics_informed_nn.fuse  27_policy_reasoning.fuse  28_tensorized_planner.fuse  29_explainable_pipeline.fuse  30_llm_guardrail.fuse  run_new_architectures.py
examples/ckpt/: emb.npy  lm_head.npy  object_emb.npy  wk.npy  wq.npy  wv.npy
examples/data/: prompt.txt  prompt.vocab.json
examples/runs/: cnn_conv.npz  diffusion_trace.npz  dlogic_conclusion.npz  ebm_energy.npy  ebm_recon.npz  explain_contrib.npy  explain_probs.npz  factor_graph_joint.npz  gnn_embeddings.npz  gp_cov.npz  gp_mean.npz  graph_transformer_context.npz  hmm_alpha.npz  kg_scores.npz  llm_guardrail_logits.npz  lr_probs.npz  mlp_scores.npz  nb_scores.npz  neuro_symbolic_scores.npz  pinn_prediction.npz  pinn_residual.npz  policy_reasoning.npz  prob_neural_posterior.npy  prob_neural_recon.npz  rbm_free_energy.npy  rnn_hidden.npz  sally.jsonl  svm_decision.npz  svm_margin.npy  transformer_block.npz  vae_kl.npy  vae_recon.npz
site/: 404.html  index.html  objects.inv  sitemap.xml  visualization.html
site/backend_matrix/: index.html
site/cli/: index.html
site/community/: index.html
site/concepts/: index.html
site/dsl_reference/: index.html
site/get-started/: index.html
site/how-to/: index.html
site/reference/: index.html
site/reference/SUMMARY/: index.html
site/reference/fuse/: index.html
site/search/: search_index.json
site/tutorials/: index.html
src/fuse/: __init__.py  __main__.py  interop.py  package.py
src/fuse/core/: __init__.py  ast.py  ast_lowering.py  builtins.py  cache.py  evaluator_numpy.py  exceptions.py  expr_grammar.lark  fuse_grammar.lark  ir.py  macro_rewrite.py  parser.py  parser_expr.py  policies.py  program.py  shape_checker.py  stats.py  temperature.py
src/fuse/inference/: __init__.py  grad_builder.py  (+1 more)
stubs/fuse/: __init__.pyi  __main__.pyi  interop.pyi  package.pyi
tests/: __init__.py  _torch_utils.py  conftest.py  test_ast_lowering_sugar.py  test_ast_parser_smoke.py  test_attention_fastpaths.py  test_boolean_datalog.py  test_bpts_training.py  test_broadcast_property_v2.py  test_cli_smoke.py  test_dsl_roundtrip.py  test_examples_run.py  test_execution_config.py  test_file_io.py  test_fn_inline_params_modules.py  test_gradient_finite_difference.py  test_jax_backend.py  test_macro_rewrite.py  test_manifest_weight_store.py  test_monte_carlo_projection.py  test_package.py  test_parser_properties.py  test_program_explain.py  test_program_templates.py  test_quantization.py  test_remote_weight_store.py  test_runtime.py  test_shape_mistakes.py  test_streaming_time.py  test_symbolic_grad.py  test_temperature.py  test_torch_fx.py  test_transformer_roundtrip.py  test_tree_factor_program.py  test_tucker_dense.py  test_v2_conformance_backends.py  test_v2_negative.py
(+56 files in other folders)
