[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuse-ai"
version = "0.0.1"
description = "Fuse: tensor-equation DSL as a library (NumPy backend + Torch/JAX stubs)"
readme = "README.md"
authors = [{name = "Fuse OSS"}]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
torch = [
    # Prefer a simple, inclusive pin; avoid blocking working envs
    "torch>=2.8,<3 ; sys_platform != 'darwin' or platform_machine == 'arm64'",
]
jax = [
    "jax>=0.4.30",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fuse" = ["py.typed"]

[tool.pytest.ini_options]
markers = [
    "slow: Marks tests that exercise GPU backends or other slow execution paths.",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
ignore_missing_imports = true
implicit_optional = true
follow_imports = "normal"

[[tool.mypy.overrides]]
module = "src.fuse.*"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
allow_untyped_calls = true
implicit_reexport = true
ignore_missing_imports = true
