[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuse-ai"
version = "0.0.1"
description = "Fuse: tensor-equation DSL as a library (NumPy backend + Torch/JAX stubs)"
readme = "README.md"
authors = [{name = "Fuse OSS"}]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "lark>=1.1",
]

[project.optional-dependencies]
torch = [
    # Prefer a simple, inclusive pin; avoid blocking working envs
    "torch>=2.8,<3 ; sys_platform != 'darwin' or platform_machine == 'arm64'",
]
jax = [
    "jax>=0.4.30",
]
bench = [
    # Bundle GPU-capable backends for benchmarking helpers
    "torch>=2.8,<3 ; sys_platform != 'darwin' or platform_machine == 'arm64'",
    "jax>=0.4.30",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.92",
    "ruff>=0.6",
    "mypy>=1.11",
    "typing_extensions>=4.6",
    "types-requests",
    # Docs
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
    "mike>=2.0",
    "mkdocs-link-check>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fuse" = ["py.typed"]

[tool.pytest.ini_options]
markers = [
    "slow: Marks tests that exercise GPU backends or other slow execution paths.",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
ignore_missing_imports = true
implicit_optional = true
follow_imports = "normal"
mypy_path = ["stubs"]

[[tool.mypy.overrides]]
module = "src.fuse.*"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
allow_untyped_calls = true
implicit_reexport = true
ignore_missing_imports = true
